gdb/cp-support.h
@@ -158,6 +158,12 @@ extern struct symbol *cp_lookup_symbol_imports (const char *scope,
                                                 const int declaration_only,
                                                 const int search_parents);
 
+extern struct symbol *cp_lookup_symbol_imports_or_template
+     (const char *scope,
+      const char *name,
+      const struct block *block,
+      const domain_enum domain);
+
 extern struct type *cp_lookup_nested_type (struct type *parent_type,
 					   const char *nested_name,
 					   const struct block *block);
